--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#who">About Us</a>
+                <a class="nav-link" href="about.html">About Us</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#services">Our Services</a>
@@ -165,7 +165,7 @@
             <div class="col-12 strip"></div>
         </div>
     </div>
-    <div class="container-fluid">
+    <div class="container-fluid" id="services">
         <div class="row">
             <div class="col-12 center-text">
                 <h3 class="font pt-3 pb-2">Our Services</h3>
@@ -283,22 +283,22 @@
     <div class="container-fluid">
         <div class="row footer-background">          
             <div class="col-sm-4 col-md-3 contact-footer">
-              <p class="mt-3 text-light delivery-text font">Contact Us:</p>
+              <h5 class="mt-3 text-light delivery-text font">Contact Us:</h5>
               <p class="footer-text font">Walnut Tree Cottage<br/>Colmworth Road<br/>Little Staughton<br/>Bedfordshire<br/>MK44 2BX</p>
             </div>
             <div class="col-sm-4 col-md-3 small-none">
-                <p class="mt-3 text-light font">Information</p>
+                <h5 class="mt-3 text-light font">Information</h5>
                 <ul class="mt-3 footer-list">
-                    <li><a class="footer-text" href="#">Gas Appliance Servicing & Inspection</a></li>
-                    <li><a class="footer-text" href="#">Statutory Testing</a></li>
-                    <li><a class="footer-text" href="#">Heating Systems</a></li>
-                    <li><a class="footer-text" href="#">Plumbing Systems</a></li>
-                    <li><a class="footer-text" href="#">Reactive Call-Outs</a></li>
-                    <li><a class="footer-text" href="#">Survey</a></li>
+                    <li><a class="footer-text" href="#services">Gas Appliance Servicing & Inspection</a></li>
+                    <li><a class="footer-text" href="#services">Statutory Testing</a></li>
+                    <li><a class="footer-text" href="#services">Heating Systems</a></li>
+                    <li><a class="footer-text" href="#services">Plumbing Systems</a></li>
+                    <li><a class="footer-text" href="#services">Reactive Call-Outs</a></li>
+                    <li><a class="footer-text" href="#services">Survey</a></li>
                 </ul>
             </div>
             <div class="col-sm-4 col-md-3 small-none">
-                <p class="mt-3 text-light font">Quick Links</p>
+                <h5 class="mt-3 text-light font">Quick Links</h5>
                 <ul class="mt-3 footer-list">
                     <li><a class="footer-text" href="#home">Home</a></li>
                     <li><a class="footer-text" href="#who">About Us</a></li>
@@ -307,7 +307,7 @@
                 </ul>
             </div>
             <div class="col-sm-12 col-md-3 footer-socials">
-                <p class="mt-3 text-light font">Follow Us</p>
+                <h5 class="mt-3 text-light font">Follow Us</h5>
                 <ul class="mt-3 footer-list icons">
                     <li><a href="#" target="_blank" rel="noopener"
                       aria-label="Click here to go to our facebook page"><i class="fab fa-facebook"></i></a></li>
